[project]
name = "flet-map"
version = "0.2.0"
description = "Display interactive Maps in your Flet apps."
readme = "README.md"
authors = [
    { name = "Flet contributors", email = "hello@flet.dev" }
]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [

]

[project.urls]
Homepage = "https://flet.dev"
Documentation = "https://flet-dev.github.io/flet-map"
Repository = "https://github.com/flet-dev/flet-map"
Issues = "https://github.com/flet-dev/flet-map/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocstrings-python-xref",
    "mike",
    "markdown>=3.6",
    "pymdown-extensions",
    "mkdocs-glightbox",
    "pygments>=2.16",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
